added more vendors (untested!)
